fix: increase action input widths so labels are fully visible
Global width 58px → 80px (fits "Successes", "Dice", "Mod" etc.)
Non-rerollable 70px → 110px (fits "Denominator" and "Numerator")
Injury 90px → 100px (fits "KO (Stunty)" comfortably)

--- a/ActionCalculator.Web/Client/wwwroot/css/app.css
+++ b/ActionCalculator.Web/Client/wwwroot/css/app.css
@@ -69,17 +69,17 @@ h2 {
 
 .mud-input-number-control {
     margin-top: 0 !important;
-    width: 58px;
+    width: 80px;
     display: inline-flex !important;
     margin-left: 3px !important;
 }
 
 .non-rerollable .mud-input-number-control {
-    width: 70px;
+    width: 110px;
 }
 
 .injury-action .mud-input-number-control {
-    width: 90px;
+    width: 100px;
 }
 
 .actions-container .mud-button-outlined, .calculation-results .mud-button-outlined {
